--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,41 @@
   margin: 0;
   font-family: "Dancing Script", cursive;
 }
+
+.hero {
+  position: relative;
+  height: 100vh;
+  width: 100%;
+  background: #eff4fd;
+}
+
+nav {
+  display: flex;
+  width: 95%;
+  padding: 20px 20px;
+  align-items: center;
+  justify-content: space-between;
+}
+
+nav ul li {
+  display: inline-block;
+  list-style: none;
+  margin: 10px 70px;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: #000;
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+
+nav ul li a:hover {
+  text-decoration: underline;
+  color: #fcc6cf;
+}
+
+.detel {
+  margin-left: 8%;
+  margin-top: 15%;
+}
