--- a/styles.css
+++ b/styles.css
@@ -1,35 +1,61 @@
+:root {
+  --main-color: #fcc6cf;
+}
+
 * {
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  margin: 0 0 3rem 0;
   font-family: "Dancing Script", cursive;
+  font-size: 1rem;
+  background-color: #eff4fd;
+  color: #000;
 }
 
 .hero {
   position: relative;
   height: 100vh;
   width: 100%;
-  background: #eff4fd;
+}
+
+.header {
+  width: 100%;
+  height: 100vh;
+  background-image: url(images/background.png);
+  background-size: cover;
+  background-position: center;
+}
+
+.container {
+  padding: 10px 3%;
 }
 
 nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 20px;
-  width: 95%;
+  flex-wrap: wrap;
 }
 
-.navbar-links ul {
-  display: flex;
-  margin: 10px 70px;
+.logo {
+  width: 100px;
 }
 
-.navbar-links li {
+nav ul li {
+  display: inline-block;
   list-style: none;
+  margin: 10px 20px;
 }
 
-.navbar-links li a {
-  display: block;
+nav ul li a {
   padding: 2rem;
   font-size: 1.5rem;
   font-weight: bold;
@@ -38,12 +64,12 @@ nav {
 }
 
 .navbar-links ul li a:hover {
-  color: #fcc6cf;
+  color: var(--main-color);
   text-decoration: underline;
 }
 
 .social {
-  display: block;
+  display: inline-block;
 }
 
 .fa-brands {
@@ -53,31 +79,18 @@ nav {
 }
 
 .fa-brands:hover {
-  color: #fcc6cf;
-}
-
-.toggle-button {
-  position: absolute;
-  top: 4.5rem;
-  right: 50vw;
-  width: 30px;
-  height: 21px;
-  display: none;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-.toggle-button .bar {
-  height: 3px;
-  width: 100%;
-  background-color: #000;
-  border-radius: 10px;
+  color: var(--main-color);
 }
 
 .detel {
-  font-size: 1.25rem;
   margin-left: 8%;
   margin-top: 12%;
+  font-size: 30px;
+}
+
+.detel h1 span {
+  text-decoration: underline;
+  text-decoration-color: var(--main-color);
 }
 
 /* Button 1 */
@@ -105,7 +118,7 @@ nav {
 }
 
 .btn1::before {
-  background-color: #fcc6cf;
+  background-image: url(images/background-button.png);
   content: "";
   height: 100%;
   position: absolute;
@@ -141,51 +154,13 @@ nav {
   transform: translate(5px, -5px);
 }
 
-.images {
-  bottom: 0;
-  height: 80%;
-  position: absolute;
-  right: 200px;
-  width: 45%;
-}
-
-.images img {
-  bottom: 0;
-  height: 100%;
-  left: 50%;
-  position: absolute;
-  transform: translate(-50%);
-  transition: bottom 1s, left 1s;
-}
-
-.images:hover .shape {
-  bottom: 40px;
-}
-
-.images:hover .marti {
-  left: 45%;
-}
-
-@media (max-width: 900px) {
-  .navbar-links li a {
-    font-size: 1.25rem;
+@media only screen and (max-width: 600px) {
+  .header {
+    background-image: url(images/background-screen.png);
   }
 
-  .fa-brands {
-    font-size: 1.5rem;
-  }
-}
-
-@media (max-width: 840px) {
-  .toggle-button {
-    display: flex;
-  }
-
-  .navbar-links {
-    display: none;
-  }
-
-  .social {
-    display: none;
+  .detel {
+    margin-top: 60%;
+    font-size: 16px;
   }
 }
